--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,38 @@
+.icon-circle::before {
+  content: '';
+  position: absolute;
+  
+  height: 10px;
+  width: 10px;
+  transform: scale(1.8);
+  background: inherit;
+  opacity:.2;
+  border-radius: 10px;
+  
+}
+.icon-circle {
+  margin-top: 3px;
+  position: relative;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+}
+
 .text-bebas-neue {
   font-family: 'Bebas Neue', cursive;
 }
 
+.text-supermercado {
+  font-family: 'Supermercado One', cursive;
+}
+
+.text-ubuntu {
+  font-family: 'Ubuntu';
+}
+
+.text-grey {
+  color:#555;
+}
 
 .row ul {
   padding: 0;
@@ -10,11 +41,16 @@
   list-style: none;
 }
 
+.no-lh {
+  line-height: 1;
+}
+
 .time {
   font-size: 65px;
 }
 
 .first-section {
+  border-bottom: 2px solid #fafafa;
   border-radius: 0 0 1.4em 1.4em;
   width:100%;
   padding-top: 0 !important;
@@ -29,10 +65,18 @@
   object-fit: cover; 
 }
 
+.scheduleContainer .card:nth-child(even) {
+  border-left: 4px solid #66bbff;
+}
+.scheduleContainer .card {
+  border-top: 4px solid #f0f0f0;
+  border-bottom: 2px solid #fafafa;
+  min-height: 200px;
+}
+
 @media only screen and (min-width:992px) {
   .first-section {
     height:100vh;
-  
   }
   
   .profile-photo {
