--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,13 @@
   min-height: 200px;
 }
 
+  .fs-md-5 {
+    font-size: 1rem !important;
+  }
 @media only screen and (min-width:992px) {
+  .fs-md-5 {
+    font-size: 20px !important;
+  }
   .first-section {
     height:100vh;
   }
